--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,6 @@ h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
-  margin-bottom: 0;
 }
 
 h2,
@@ -22,40 +21,33 @@ body,
 input[text],
 button {
   color: #333;
-  font-family: Cambria, Georgia, serif;
-}
-
-/* Стилі для навігації */
-nav a {
-  padding: 1rem;
-  text-decoration: none;
-  margin-right: 10px;
-  margin-top: 10px;
-  display: inline-block;
-  background-color: #e8e8e8;
-  color: #3d3d3d;
-  border-radius: 4px;
-}
-
-nav a:last-child {
-  margin-right: 0;
-}
-
-nav a:hover {
-  color: white;
-  background-color: #42545C;
-}
-
-nav a.active {
-  background-color: black;
-}
-
-/* everywhere else */
-* {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.messages {
-  margin-top: 20px;
-  color: #8d1b1b;
+button {
+  background-color: #eee;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  color: black;
+  font-size: 1.2rem;
+  padding: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+button:hover {
+  background-color: black;
+  color: white;
+}
+
+button:disabled {
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
+}
+/* everywhere else */
+* {
+  font-family: Arial, Helvetica, sans-serif;
 }
